--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
   "scripts": {
     "build": "npm run build:server && npm run build:client",
     "build:client": "cross-env NODE_ENV=production webpack --env.prod",
-    "build:server": "cross-env NODE_ENV=production babel src --out-dir tmp/lib",
+    "build:server": "cross-env NODE_ENV=production babel app --out-dir build/lib",
     "prebuild": "npm run clean",
-    "clean": "rimraf tmp lib",
+    "clean": "rimraf build lib",
     "dev": "cross-env NODE_ENV=development node app/server",
-    "start": "cross-env NODE_ENV=production node tmp/lib/server"
+    "start": "cross-env NODE_ENV=production node build/lib/server",
+    "eslint-check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
+    "prettify": "prettier --single-quote --no-semi --write '{app,__{tests,mocks}__}/**/*.js'"
   },
   "dependencies": {
     "express": "^4.16.2",
     "isomorphic-fetch": "^2.2.1",
+    "jsonfile": "^4.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -27,6 +30,8 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "assets-webpack-plugin": "^3.5.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-dynamic-import-webpack": "^1.0.1",
@@ -38,11 +43,10 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
     "cross-env": "^5.1.0",
+    "eslint": "^4.11.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
-    "nodemon": "^1.12.1",
-    "npm-run-all": "^4.1.1",
     "prettier": "^1.7.4",
     "rimraf": "^2.6.2",
     "webpack": "^3.8.1",
