--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "author": "Benoit Maigret <benoit.maigret@fairfaxmedia.com.au>",
   "license": "MIT",
   "scripts": {
-    "start": "",
-    "dev": "babel-node ./internal/scripts/development"
+    "start":
+      "webpack-dev-server --mode development --config ./internal/webpack/webpack.config.babel.js",
+    "dev": "babel-node ./internal/scripts/development",
+    "build":
+      "webpack --config ./internal/webpack/webpack.config.babel.js --mode production",
+    "analyse":
+      "webpack --config ./internal/webpack/webpack.analyse.config.babel.js --mode production"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -21,6 +26,7 @@
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.0.1",
     "webpack": "^4.5.0",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^3.1.1"
   },
