--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "author": "Benoit Maigret <benoit.maigret@fairfaxmedia.com.au>",
   "license": "MIT",
   "scripts": {
-    "start":
-      "webpack-dev-server --mode development --config ./internal/webpack/webpack.config.babel.js",
-    "dev": "babel-node ./internal/scripts/development",
     "build":
       "webpack --config ./internal/webpack/webpack.config.babel.js --mode production",
+    "start":
+      "webpack-dev-server --mode development --config ./internal/webpack/webpack.config.babel.js",
+    "start:server": "yarn build && node server",
     "analyse":
       "webpack --config ./internal/webpack/webpack.analyse.config.babel.js --mode production"
   },
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
+    "express": "^4.16.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "react-hot-loader": "^4.0.1",
